# rindexer

.github/workflows/: ci-cd.yml
cli/: Cargo.toml
cli/src/commands/: new.rs  phantom.rs
core/: Cargo.toml
core/src/event/: contract_setup.rs
core/src/generator/: events_bindings.rs  trace_bindings.rs
core/src/helpers/: mod.rs
core/src/indexer/: cron_scheduler.rs  no_code.rs  start.rs
core/src/manifest/: network.rs  yaml.rs
core/src/streams/: rabbitmq.rs
e2e-tests/: Cargo.toml
examples/clickhouse_factory_indexing/: Cargo.toml
examples/clickhouse_factory_indexing/src/rindexer_lib/typings/rindexer_factory_contract/events/: uniswap_v3_factory.rs  uniswap_v3_factory_pool_created_pool.rs  uniswap_v3_factory_pool_created_token_0_token_1.rs  uniswap_v3_pool.rs  uniswap_v3_pool_token.rs
examples/rindexer_factory_indexing/: Cargo.toml
examples/rindexer_factory_indexing/src/rindexer_lib/typings/rindexer_factory_contract/events/: uniswap_v3_factory.rs  uniswap_v3_factory_pool_created_pool.rs  uniswap_v3_factory_pool_created_token_0_token_1.rs  uniswap_v3_pool.rs  uniswap_v3_pool_token.rs
examples/rindexer_rust_playground/: Cargo.toml
examples/rindexer_rust_playground/src/rindexer_lib/typings/rindexer_playground/events/: erc_20_filter.rs  rocket_pool_eth.rs  uniswap_v3_pool_filter.rs
examples/rust_clickhouse/: Cargo.toml
examples/rust_clickhouse/src/rindexer_lib/typings/clickhouse_indexer/events/: rocket_pool.rs
xtask/: Cargo.toml
