[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
anyhow = { version = "1.0.102" }
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt"
] }
rindexer = { path = "../core" }

[features]
default = []
debug-json = []
